Corrected the folder structure for .kaggle in root path

--- a/computer-vision/2_Cats_vs_Dogs_Kaggle_Dataset.ipynb
+++ b/computer-vision/2_Cats_vs_Dogs_Kaggle_Dataset.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP+l25Nh/O2zNqCG4b6S4ND",
+      "authorship_tag": "ABX9TyN1dP24BAWGOTCAz5u5eTnz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,100 +46,67 @@
       "outputs": [],
       "source": [
         "from google.colab import files\n",
-        "files.upload()\n"
+        "files.upload()"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "ls -l"
-      ],
-      "metadata": {
-        "id": "rirDCu41rG9c",
-        "outputId": "6a2abea8-927a-4a8b-b0bb-576b96327001",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 12,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "total 8\n",
-            "drwxr-xr-x 2 root root 4096 Sep  4 13:28 \u001b[0m\u001b[01;34mkaggle\u001b[0m/\n",
-            "drwxr-xr-x 1 root root 4096 Aug 31 13:47 \u001b[01;34msample_data\u001b[0m/\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!mkdir ./kaggle"
+        "!mkdir ~/.kaggle"
       ],
       "metadata": {
         "id": "PaDepyLVrTIW"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "!cp kaggle-2.json ./kaggle/kaggle-2.json"
+        "!cp kaggle.json ~/.kaggle/"
       ],
       "metadata": {
         "id": "W5qMrPAxsMsc"
       },
-      "execution_count": 7,
+      "execution_count": 4,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "ls -l kaggle"
-      ],
-      "metadata": {
-        "id": "GiIY-eG9syK0",
-        "outputId": "240ba101-838d-486b-b247-75871b8b807f",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 16,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "total 4\n",
-            "-rw------- 1 root root 65 Sep  4 13:29 kaggle-2.json\n"
-          ]
-        }
-      ]
     },
     {
       "cell_type": "code",
       "source": [
         "# Change access to your Kaggle API so only current account has access to read/write\n",
-        "!chmod 600 ./kaggle/kaggle-2.json"
+        "!chmod 600 ~/.kaggle/kaggle.json"
       ],
       "metadata": {
         "id": "F5k2liYGspgx"
       },
-      "execution_count": 15,
+      "execution_count": 5,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "!kaggle competitions download -c dogs-vs-cats"
+      ],
       "metadata": {
-        "id": "7JgpNAAttRLx"
+        "id": "7JgpNAAttRLx",
+        "outputId": "789360eb-60c7-416a-9279-ac7602f19f94",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloading dogs-vs-cats.zip to /content\n",
+            " 99% 801M/812M [00:19<00:00, 44.6MB/s]\n",
+            "100% 812M/812M [00:19<00:00, 42.9MB/s]\n"
+          ]
+        }
+      ]
     }
   ]
 }
