using image dataset from directory API

--- a/computer-vision/2_Cats_vs_Dogs_Kaggle_Dataset.ipynb
+++ b/computer-vision/2_Cats_vs_Dogs_Kaggle_Dataset.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN1dP24BAWGOTCAz5u5eTnz",
+      "authorship_tag": "ABX9TyNrMxH1Xsq05/tb6/rBkUtw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,7 +57,7 @@
       "metadata": {
         "id": "PaDepyLVrTIW"
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -68,7 +68,7 @@
       "metadata": {
         "id": "W5qMrPAxsMsc"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -80,7 +80,7 @@
       "metadata": {
         "id": "F5k2liYGspgx"
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -90,20 +90,307 @@
       ],
       "metadata": {
         "id": "7JgpNAAttRLx",
-        "outputId": "789360eb-60c7-416a-9279-ac7602f19f94",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d7b5331a-1ee4-4125-ea4e-31294eb7814e"
       },
-      "execution_count": 8,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Downloading dogs-vs-cats.zip to /content\n",
-            " 99% 801M/812M [00:19<00:00, 44.6MB/s]\n",
-            "100% 812M/812M [00:19<00:00, 42.9MB/s]\n"
+            " 98% 792M/812M [00:03<00:00, 219MB/s]\n",
+            "100% 812M/812M [00:03<00:00, 222MB/s]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!unzip --qq dogs-vs-cats.zip"
+      ],
+      "metadata": {
+        "id": "9MX06-qSHFDj"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!unzip --qq train.zip"
+      ],
+      "metadata": {
+        "id": "vo88G-DVHdi7"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!unzip --qq test1.zip"
+      ],
+      "metadata": {
+        "id": "PNTU_syfIGxn"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os, shutil, pathlib"
+      ],
+      "metadata": {
+        "id": "BHROTJAhJju0"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "original_dir = pathlib.Path(\"train\")\n",
+        "new_dir = pathlib.Path(\"cats_vs_dogs\")"
+      ],
+      "metadata": {
+        "id": "xiO2AjoZJuNm"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def create_folder_structure(name, start_index, end_index):\n",
+        "\n",
+        "  for category in (\"cat\", \"dog\"):\n",
+        "\n",
+        "    dir=new_dir / name / category\n",
+        "    os.makedirs(dir)\n",
+        "\n",
+        "    file_names = [f\"{category}.{i}.jpg\" for i in range(start_index, end_index)]\n",
+        "\n",
+        "    for files in file_names:\n",
+        "      shutil.copyfile(src=original_dir / files, dst=dir / files)"
+      ],
+      "metadata": {
+        "id": "6V56cqjyJ9cc"
+      },
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "create_folder_structure(\"train\", start_index=0,end_index = 1000)\n",
+        "create_folder_structure(\"validation\", start_index=1000, end_index=1500)\n",
+        "create_folder_structure(\"test\", start_index=1500, end_index=2500 )"
+      ],
+      "metadata": {
+        "id": "Exex7rDWN9-t"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import tensorflow as tf\n",
+        "from tensorflow import keras\n",
+        "from tensorflow.keras import layers"
+      ],
+      "metadata": {
+        "id": "OLTFi9qbhUk-"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def getmodel():\n",
+        "\n",
+        "  inputs = keras.Input(shape=(180, 180, 3))\n",
+        "\n",
+        "  #rescale the image to 1 - 255\n",
+        "  x = layers.Rescaling(scale=1./255)(inputs)\n",
+        "\n",
+        "  x = layers.Conv2D(filters=32, activation=\"relu\", kernel_size=3) (x)\n",
+        "  x = layers.MaxPool2D(pool_size=(2,2))(x)\n",
+        "\n",
+        "  x = layers.Conv2D(filters=64, activation=\"relu\", kernel_size=3) (x)\n",
+        "  x = layers.MaxPool2D(pool_size=(2,2))(x)\n",
+        "\n",
+        "  x = layers.Conv2D(filters=128, activation=\"relu\", kernel_size=3) (x)\n",
+        "  x = layers.MaxPool2D(pool_size=(2,2))(x)\n",
+        "\n",
+        "  x = layers.Conv2D(filters=256, activation=\"relu\", kernel_size=3) (x)\n",
+        "  x = layers.MaxPool2D(pool_size=(2,2))(x)\n",
+        "\n",
+        "  x = layers.Conv2D(filters=256, activation=\"relu\", kernel_size=3) (x)\n",
+        "  \n",
+        "  x = layers.Flatten()(x)\n",
+        "\n",
+        "  outputs = layers.Dense(1, activation=\"sigmoid\")(x)\n",
+        "\n",
+        "  model = keras.Model(inputs, outputs)\n",
+        "\n",
+        "  model.compile(optimizer=\"rmsprop\",\n",
+        "                loss=\"binary_crossentropy\",\n",
+        "                metrics = [\"accuracy\"])\n",
+        "  \n",
+        "  return model"
+      ],
+      "metadata": {
+        "id": "tmZ1FN-jiA-e"
+      },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = getmodel()\n",
+        "model.summary()"
+      ],
+      "metadata": {
+        "id": "3kpZgw68j48P",
+        "outputId": "e92478d1-5fe3-4342-bc3a-520053605be2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Model: \"model\"\n",
+            "_________________________________________________________________\n",
+            " Layer (type)                Output Shape              Param #   \n",
+            "=================================================================\n",
+            " input_1 (InputLayer)        [(None, 180, 180, 3)]     0         \n",
+            "                                                                 \n",
+            " rescaling (Rescaling)       (None, 180, 180, 3)       0         \n",
+            "                                                                 \n",
+            " conv2d (Conv2D)             (None, 178, 178, 32)      896       \n",
+            "                                                                 \n",
+            " max_pooling2d (MaxPooling2D  (None, 89, 89, 32)       0         \n",
+            " )                                                               \n",
+            "                                                                 \n",
+            " conv2d_1 (Conv2D)           (None, 87, 87, 64)        18496     \n",
+            "                                                                 \n",
+            " max_pooling2d_1 (MaxPooling  (None, 43, 43, 64)       0         \n",
+            " 2D)                                                             \n",
+            "                                                                 \n",
+            " conv2d_2 (Conv2D)           (None, 41, 41, 128)       73856     \n",
+            "                                                                 \n",
+            " max_pooling2d_2 (MaxPooling  (None, 20, 20, 128)      0         \n",
+            " 2D)                                                             \n",
+            "                                                                 \n",
+            " conv2d_3 (Conv2D)           (None, 18, 18, 256)       295168    \n",
+            "                                                                 \n",
+            " max_pooling2d_3 (MaxPooling  (None, 9, 9, 256)        0         \n",
+            " 2D)                                                             \n",
+            "                                                                 \n",
+            " conv2d_4 (Conv2D)           (None, 7, 7, 256)         590080    \n",
+            "                                                                 \n",
+            " flatten (Flatten)           (None, 12544)             0         \n",
+            "                                                                 \n",
+            " dense (Dense)               (None, 1)                 12545     \n",
+            "                                                                 \n",
+            "=================================================================\n",
+            "Total params: 991,041\n",
+            "Trainable params: 991,041\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from tensorflow.keras.utils import image_dataset_from_directory"
+      ],
+      "metadata": {
+        "id": "-QXNSaHoZgqL"
+      },
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_dataset = image_dataset_from_directory(new_dir / \"train\", batch_size=32, image_size=(180, 180))"
+      ],
+      "metadata": {
+        "id": "T9MCPS7lZzP3",
+        "outputId": "f9fe3cc0-87e5-4205-a205-5fde42c3ff37",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Found 2000 files belonging to 2 classes.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "validation_dataset = image_dataset_from_directory(new_dir / \"validation\", batch_size=32, image_size=(180, 180))"
+      ],
+      "metadata": {
+        "id": "s6FdoEdMaR22",
+        "outputId": "4b818fd2-8766-41c2-913c-8f713fddb438",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Found 1000 files belonging to 2 classes.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_dataset = image_dataset_from_directory(new_dir / \"test\", batch_size=32, image_size=(180, 180))"
+      ],
+      "metadata": {
+        "id": "3KL0-0djagqr",
+        "outputId": "874bb761-be9b-4aef-b341-30462c6bc699",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Found 2000 files belonging to 2 classes.\n"
           ]
         }
       ]
