Updated version with comments and link to TensorFlow documentations

--- a/data-api/5_Tensorflow_Data_API.ipynb
+++ b/data-api/5_Tensorflow_Data_API.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM0OkicZWQnsHllUiQVL5gG",
+      "authorship_tag": "ABX9TyPmNtDH+D0SdhWemdhGvwPG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "xxqG3MaxgbQ8"
       },
@@ -48,7 +48,7 @@
       "metadata": {
         "id": "WMUyQ-klg668"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -59,7 +59,7 @@
       "metadata": {
         "id": "Ua-6-rXfhF-j"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -70,7 +70,7 @@
       "metadata": {
         "id": "uVwgPy76hTgB"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -83,9 +83,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Xtpld5oLkJjV",
-        "outputId": "58ae3e15-411a-456d-b22e-c437d4c778fe"
+        "outputId": "780bb9ad-97ab-4b7f-968a-6346412b0959"
       },
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -95,7 +95,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 6
         }
       ]
     },
@@ -110,9 +110,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aKutHuO7kPYT",
-        "outputId": "170de971-c547-4abf-92df-737f5714da7a"
+        "outputId": "39cf1dc0-b028-4c69-b1ad-a34eb2b3198c"
       },
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -141,7 +141,7 @@
       "metadata": {
         "id": "mwMVr475kqG_"
       },
-      "execution_count": 19,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -154,9 +154,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Q0ipkdSSkzLd",
-        "outputId": "6e235f22-f8b2-4f23-d198-34530f670bf0"
+        "outputId": "5b573da5-5067-472f-b9b2-a2194106c6cf"
       },
-      "execution_count": 20,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -178,7 +178,7 @@
         "\n",
         "#The reduce_func is called on every element of the input \n",
         "#dataset until the dataset is exhausted, aggregating information in \n",
-        "#\"previous_total\"\n",
+        "#\"previous_total\" (see code below)\n",
         "#The initial_state argument is used for the initial value of \"previous_total\"\n",
         "\n",
         "print(sample_dataset.reduce(0, lambda previous_total, data: previous_total + data).numpy())\n"
@@ -188,9 +188,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RLpwALXdmGNo",
-        "outputId": "caee945e-ca45-461f-8c93-5e1038eae241"
+        "outputId": "dc0bc5b5-e624-4d2a-b912-d47341dfa68a"
       },
-      "execution_count": 27,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -200,6 +200,31 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Question: What will be the output of the followin?\n",
+        "#print(sample_dataset.reduce(0, lambda previous_total, data: previous_total * data).numpy()\n",
+        "#How can you get the product of all elements?\n",
+        "\n",
+        "# https://www.tensorflow.org/guide/data#batching_dataset_elements\n",
+        "# https://www.tensorflow.org/api_docs/python/tf/data/Dataset#reduce"
+      ],
+      "metadata": {
+        "id": "fEKXM9-Jp_BR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "R6OY-9vOq2hU"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
